# quoddel

./: .gitignore  README.md
.github/workflows/: linter.yml  release.yml  rust.yml
quoddel/: Cargo.toml
quoddel/src/: calc.rs  lib.rs  main.rs  output.rs
quoddel/tests/: cli.rs
quoddel/tests/inputs/: fasta1.fa  fasta2.fa
