[package]
name = "quoddel"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Shows some stats for nucleotide fasta files, e.g. genome assemblies."
authors = ["Janina Mass <janina.mass@gmail.com>"]

[dependencies]
clap = "3"
seq_io = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"

[profile.release]
lto = true